--- a/style.css
+++ b/style.css
@@ -165,3 +165,9 @@
       display: none;
     }
   }
+
+  .account-name {
+    font-weight: bold;
+    font-size: 1.5rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
