--- a/style.css
+++ b/style.css
@@ -165,3 +165,19 @@
       display: none;
     }
   }
+
+  #comments {
+    display: flex;
+    align-items: center;
+    margin-top: 10px; 
+}
+
+#comment-input {
+  flex-grow: 1; 
+  padding: 5px;
+}
+
+#submit-comment {
+  margin-left: 10px; 
+  padding: 5px 10px;
+}
